Solarlint code cleanup